code/meme-generator/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meme-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: meme-Deployment
